bat.bool1.nearhundred.NearHundred.scala.error
Compilation error:
NearHundred:2: error: not found: value a
  a=n-100
  ^NearHundred:3: error: not found: value b
  b=n-200
  ^NearHundred:4: error: not found: value Maths
  if(Maths.abs(a)<10) {
     ^NearHundred:4: error: not found: value a
  if(Maths.abs(a)<10) {
               ^NearHundred:7: error: not found: value Maths
  if(Maths.abs(b)<10) {
     ^NearHundred:7: error: not found: value b
  if(Maths.abs(b)<10) {
               ^