bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  a=n-100
  b=n-200
  if(Maths.abs(a)<10) {
    return true
  }
  if(Maths.abs(b)<10) {
    return true
  }
  return false
}